# ChangeLog for sys-apps/calculate-server
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-server-2.1.12-r3 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/server_i18n_path.patch, -calculate-server-2.1.12-r2.ebuild,
  +calculate-server-2.1.12-r3.ebuild:
  Add path for place i18n files.

*calculate-server-2.1.12-r2 (21 Jul 2010)

  21 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.12-r1.ebuild, +calculate-server-2.1.12-r2.ebuild,
  +files/calculate-server-2.1.12-r2.patch:
  Add bugfix for calculate-server.

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-server-9999.ebuild:
  Fix git path.

*calculate-server-2.1.12-r1 (10 Apr 2010)
*calculate-server-2.1.10-r1 (10 Apr 2010)

  10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.5-r2.ebuild, -files/calculate-server-2.1.5-r2.patch,
  -calculate-server-2.1.6.ebuild, -calculate-server-2.1.6-r1.ebuild,
  -calculate-server-2.1.7-r1.ebuild, -files/calculate-server-2.1.7-r1.patch,
  -calculate-server-2.1.8.ebuild, -calculate-server-2.1.10.ebuild,
  +calculate-server-2.1.10-r1.ebuild, -calculate-server-2.1.12.ebuild,
  +calculate-server-2.1.12-r1.ebuild:
  Removed old version. Fix samba depends for new ebuilds.

*calculate-server-2.1.12 (06 Apr 2010)

  06 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.11.ebuild, +calculate-server-2.1.12.ebuild:
  Bump version. Remove previous.

*calculate-server-2.1.11 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.11.ebuild:
  Bump version.

*calculate-server-2.1.10 (15 Mar 2010)

  15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.9.ebuild, +calculate-server-2.1.10.ebuild:
  Bump version.

*calculate-server-2.1.9 (03 Mar 2010)

  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>