@@ -3,7 +3,7 @@ AUX server_i18n_path.patch 419 RMD160 46984bb115772b5076ae0b96a5577628d17b2621 S
 DIST calculate-server-2.1.10.tar.bz2 153544 RMD160 b5c6085aef1e3eb57cf5c356ab9dcef6d1352f45 SHA1 b8f666b308293f74e1be135e5fc362014e8f2763 SHA256 ff015464535b833936df041466f21105a841ac9853cb545bb99c9f0096e55559
 DIST calculate-server-2.1.12.tar.bz2 156962 RMD160 beb1d50b72bbb592c666a81504e955a99e4341c4 SHA1 c38413bbf7d257e78888453f5a94ec15071c432b SHA256 c866814d014c5beb84b24febc8491d1d8cbebb6b545b21c4ff601d05b593b36b
 EBUILD calculate-server-2.1.10-r1.ebuild 4837 RMD160 4573182b01d66e75b0d81d280f7ddb74b69f6828 SHA1 a5e462f7200f86f4e93e0d999eea7a1a8bde7a62 SHA256 fb3e3d434b67d8ed3402515190f60554405eb1b85ac28e1492d43c6de2f0d13d
-EBUILD calculate-server-2.1.12-r3.ebuild 5078 RMD160 c595e4bdd8dd9a75c3607323f8b9608c1d6bb6be SHA1 8b4220274706de04559da3e7b577bae5aa9b3df2 SHA256 d1a4cbf6620bf7ae87050f3da342c863d733304450984d93149a8f5dd72814ec
+EBUILD calculate-server-2.1.12-r4.ebuild 5156 RMD160 d021fb41ebce482f456e67fce2d906f2883b0f78 SHA1 df0c08a1c87b85521a92476996f2005f10b8b305 SHA256 d720b91d1e47d9c8b1b7fe0d155c93d0a08bbcd6d2967a4b36155a14e7d9c32e
 EBUILD calculate-server-9999.ebuild 982 RMD160 870c42d025013fd7f7d0fe8cde686546e3bc2d70 SHA1 90b5183a071503257a8842d2592096e0dc0aa49a SHA256 01b0741043617d45c6ce8089c207684eab1aa7c8610bf3cc33bac1124c67df52
-MISC ChangeLog 3890 RMD160 7c013e9c63b509fa1ef73ba25a86ff5c1b7ec2b7 SHA1 7c021fef5fff07ff76bfee9123db5f77ead84f91 SHA256 aeb589ad8bca595d1c45b0630b0117b9ef9bef7151abc78f347d09a9d023e3d2
+MISC ChangeLog 4100 RMD160 48bc74747dd8f36ee83a8d18ee259a0d445e36cf SHA1 7e93fe082907d3a11865de351e43e471e405ec43 SHA256 73c9dd69f6ed712e7def3ae2b6a9007203dc32e527cade69f23190b7cd0723c3
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
