@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.12-r4 (23 Sep 2010)
+
+  23 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-server-2.1.12-r3.ebuild, +calculate-server-2.1.12-r4.ebuild:
+  Added use depend for proftpd.
+
 *calculate-server-2.1.12-r3 (12 Aug 2010)
 
   12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
